<resources>
    <string name="app_name">To-DoList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_lista_">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="agregar_lista">Agregar Lista</string>
    <string name="nombre_lista">Nombre de Lista</string>
    <string name="color_fondo">Color de Fondo</string>}
    <string name="icono_lista">Icono de lista</string>
    <string name="lista_compartida">¿Lista compartida?</string>
    <string name="user_name">Invitaciones</string>
    <string name="add_user">Add</string>
    <string name="crear_listas">Crear</string>
    <string name="cancelar_listas">Cancelar</string>

    <string name="Nombre">Nombre de usuario</string>
    <string name="CorreoElectronico">Correo Electronico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="confirmarContraseña">Confirmar Contraseña</string>
    <string name="Registrar">¿No tiene cuenta? Registrar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="IniciarSesion">Iniciar</string>

    <string name="addEdit_agregar">Agregar Tarea Nueva</string>
    <string name="addEdit_editar">Edición de tarea</string>
    <string name="addEdit_nombre">Nombre de la tarea</string>
    <string name="addEdit_descripcion">Descripción de la tarea</string>
    <string name="addEdit_importancia">Nivel de importancia</string>
    <string name="addEdit_importancia_alta">Alta</string>
    <string name="addEdit_importancia_normal">Normal</string>
    <string name="addEdit_importancia_baja">Baja</string>
    <string name="addEdit_importancia_noAsignada">Sin asignar</string>
    <string name="addEdit_fecha">Agregar fecha de vencimiento</string>
    <string name="addEdit_fecha2">Fecha</string>
    <string name="addEdit_hintNombre">Ej: Ejemplo</string>
    <string name="addEdit_agregarTarea">Agregar Tarea</string>
    <string name="task_importance">Nv.%1d</string>
    <string name="task_dueDate">Para: %1s/%2s/%3s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Titulo">Titulo</string>
    <string name="importancia">Importancia</string>
    <string name="fechaVencimiento">Fecha Vencimiento</string>
    <string name="shared">Shared</string>
    <string name="descripci_n">Descripción</string>
    <string name="editar_lista">Editar Lista</string>
    <string name="eliminar_lista">Eliminar Lista</string>
    <string name="ordenar">Ordenar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ordenar_por">Ordenar Por</string>
    <string name="fecha">Fecha</string>
    <string name="orden">Orden</string>
    <string name="ascendente">Ascendente</string>
</resources>
