<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_addEdit_task">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/addEdit_textView_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addEdit_agregar"
                    android:textAlignment="center"
                    android:textSize="30sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/addEdit_textView_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addEdit_nombre"
                    android:textSize="25sp"/>

                <EditText
                    android:id="@+id/addEdit_editText_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addEdit_hintNombre"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/addEdit_textView_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addEdit_descripcion"
                    android:textSize="25sp"/>



                <EditText
                    android:id="@+id/addEdit_editText_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:scrollbars="vertical" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="50sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/addEdit_textView_importancia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addEdit_importancia"
                    android:textSize="25sp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/addEdit_radioButton_sinAsignar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addEdit_importancia_noAsignada"
                        android:textSize="20sp"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/addEdit_radioButton_baja"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addEdit_importancia_baja"
                        android:textSize="20sp" />
                    <RadioButton
                        android:id="@+id/addEdit_radioButton_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addEdit_importancia_normal"
                        android:textSize="20sp" />
                    <RadioButton
                        android:id="@+id/addEdit_radioButton_alta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addEdit_importancia_alta"
                        android:textSize="20sp" />
                </RadioGroup>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="50sp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/addEdit_textView_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addEdit_fecha"
                    android:textSize="25sp"/>

                <DatePicker
                    android:id="@+id/addEdit_datePicker_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/addEdit_agregarTarea"
                    />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>



</LinearLayout>