<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.ActivityList"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="110sp">
        <TextView
            android:id="@+id/list_textView_addList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar_lista"
            android:textColor="@color/red"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/list_textView_nameList"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_lista"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/list_edtiText_nameList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_gravity="top"
            android:id="@+id/list_textView_color"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_fondo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="20sp"/>

        <Spinner
            android:id="@+id/spinner_color"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/list_textView_icono"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icono_lista"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20sp"/>
        <Spinner
            android:layout_marginLeft="70dp"
            android:id="@+id/spinner_icono"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/gray"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <CheckBox
            android:id="@+id/list_checkBox_listaCompartida"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/lista_compartida"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:buttonTint="@color/black"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/list_textView_nameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:hint="example@correo.com"
            android:id="@+id/list_edtiText_userName"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/list_button_addUser"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/ligh_gray"
            android:text="@string/add_user"
            android:textColor="@color/black" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recyclerView_showUser"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight=".50" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/list_button_crearLista"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/ligh_gray"
            android:text="@string/crear_listas"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/list_button_cancelarLista"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:background="@color/ligh_gray"
            android:text="@string/cancelar_listas"
            android:textColor="@color/black" />


    </LinearLayout>


</LinearLayout>